feat(): check out repo

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,10 +7,15 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - uses: actions/checkout@v2
+      
       - name: Run verify script
         run: |
+          # print current directory
           pwd
+          # List files in current directory
           ls
+          # List files in repo
           ls "${GITHUB_WORKSPACE}"
           # make file runnable, might not be necessary
           chmod +x "${GITHUB_WORKSPACE}/verify_build.sh"
